# config_auto_drive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  conanfile.py  create-library.sh  create-module.sh  deploy.sh  drive.sh  install-compile-env.sh  install-crosscompile-env.sh  lms-boot.sh  lms.sh  load.sh  load_2.sh  load_lms.sh  pull_repos_template.sh  receiver.sh  save.sh  save_lms.sh  start.sh  start_2.sh  start_3.sh  start_with_gui.sh  stub.cpp  submodule_restore.sh
build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/LMS/lms/: Makefile  cmake_install.cmake  liblmscore.dylib
build2/LMS/lms/include/lms/: definitions.h
build2/LMS/lms/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
configs/: README.md  basis.xml  cam.xml  camera_importer.lconf  car.xml  common_services.xml  ego.xml  environment.lconf  file.xml  framework_conf.xml  framework_config.xml  image.xml  image_renderer.lconf  imaging_new.xml  imaging_old.xml  load.xml  mavlink.xml  mavlink_to_data.xml  mycam.xml  new_car.xml  new_trajectory_creation.xml  ogre_default.cfg  ogre_plugins.cfg  old_car.xml  parking.xml  parking_test.xml  receiver.xml  render.xml  render_common.xml  render_ogre.xml  render_qt.xml  render_sdl.xml  save.xml  send_data.xml  sensors.xml  start_car.xml  test.xml  trajectory_controller.xml  trajectory_creation.xml  trajectory_creator.lconf  (+6 more)
configs/camera/: .~lock.cali.lconf#  cali.lconf  cali_PS2_geht.lconf  cali_p.lconf  calibration_PS2.lconf  homography_bmw.lconf  homography_cc2016_laeuft_bei_uns.lconf  homography_ximea.lconf  test  ueye_small.lconf  ueye_tall.lconf
configs/camera/old/: homography_20160204_helenefischer.lconf  homography_cc2016_hansi.lconf  ueye_small.lconf  ueye_tall.lconf
configs/imaging/: defaultCrossingParam.lconf  defaultEdgePointParam.lconf  defaultLineParam.lconf  defaultLinePointParam.lconf  defaultObstacleParam.lconf
configs/sensor/: acc.lconf  ir_r_front.lconf  rc_poti.lconf  servo_front.lconf  servo_rear.lconf  ultrasonic.lconf  velocity.lconf
configs/socket_data/: car_socket_data_receiver.lconf  car_socket_data_sender.lconf  pc_socket_data_receiver.lconf
configs/street_utils/: car.lconf  obstacle.lconf
testImages/: 0000.pgm  0001.pgm  0002.pgm  0003.pgm  0004.pgm  0005.pgm  0006.pgm  0007.pgm  0008.pgm  0009.pgm  0010.pgm  0011.pgm  0012.pgm  0013.pgm  0014.pgm  0015.pgm  0016.pgm  0017.pgm  0018.pgm  0019.pgm  0020.pgm  0021.pgm  0022.pgm  0023.pgm  0024.pgm  0025.pgm  0026.pgm  0027.pgm  0028.pgm  0029.pgm
